reduce picture padding and fix image flicker

--- a/styles/globals/_base.scss
+++ b/styles/globals/_base.scss
@@ -107,7 +107,7 @@ picture {
   float: left;
   height: auto;
   margin: 0;
-  padding: 16px;
+  padding: 12px;
   width: 100%;
 }
 
@@ -145,7 +145,7 @@ span {
 // -------------------------------------------------------------
 @media #{$mobile} {
   picture {
-    padding: 12px;
+    padding: 8px;
   }
 }
 
